--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -22,8 +22,7 @@ toc:
   - subsections:
     - name: Inverse Hessian-vector products (iHVPs) in optimization
     - name: HVPs for the study of the loss landscape
-
-  - name: A quick detour by automatic differentiation
+  - name: A quick detour of automatic differentiation
   - subsections:
     - name: Computational graph
     - name: Forward mode
@@ -38,8 +37,9 @@ toc:
     subsections:
       - name: Time complexity
       - name: Memory complexity
+  - name: Conclusion
 
-# Below is an example of injecting additional post-specific styles.enb
+# Below is an example of injecting additional post-specific styles.
 # This is used in the 'Layouts' section of this post.
 # If you use this post as a template, delete this _styles block.
 _styles: >
@@ -105,7 +105,7 @@ $$
 
 Here, the term $$\nabla^2_{yy} G(x, y)$$ is the Hessian of the function $$G$$ relatively to $$y$$. Thus, this quantity also requires computing an iHVP.
 
-To compute the iHVP, many methods proposed in the literature rely on HVPs to solve \eqref{eq:linear_system} without ever accessing $$\nabla^2 f$$, like Neumann iterates or the Conjugate Gradient method. These methods are based on the computation of HVPs, as illustrated with the highlighted terms in the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite>.
+To compute the iHVP, many methods proposed in the literature rely on HVPs to solve \eqref{eq:linear_system} without ever accessing $$\nabla^2 f$$, like Neumann iterates<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite>, the Conjugate Gradient method or gradient descent steps<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite> in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(x)v, v\rangle - \langle b, v\rangle$$. These methods are based on the computation of HVPs, as illustrated with the highlighted terms in the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite>. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
 
 <p class="framed">
   <b class="underline">Conjugate gradient to solve \eqref{eq:linear_system}</b><br>
@@ -127,14 +127,9 @@ To compute the iHVP, many methods proposed in the literature rely on HVPs to sol
   \end{align*}
 </p>
 
-
-In the bilevel literature, other strategies are employed. Some authors propose to use Neumann iterations<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite> to solve \eqref{eq:linear_system}. Others propose to use gradient descent steps or variant<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite> in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(x)v, v\rangle - \langle b, v\rangle$$.
-
-All these methods to solve \eqref{eq:linear_system} share a common feature: they involve HVPs computations in their iterations. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
-
 ### HVPs for the study of the loss landscape
 
-The study of the geometry of neural networks is an active field that aims at understanding the links between training dynamics, local geometry of the training loss and generalization. One way to study the local geometry of a neural network is to find the distribution of the eigenvalues of its Hessian matrix. Indeed, depending on the sign of the eigenvalues of the Hessian, one can for instance distinguish local minima, local maxima and saddle points. As an illustration, the following figure shows how the sign of the eigenvalues of the Hessian matrix of a function affects the shape of the function's landscape around a stationary point.
+The study of the geometry of neural networks is an active field that aims at understanding the links between training dynamics, local geometry of the training loss and generalization<d-cite key=Keskar2017></d-cite>. One way to study the local geometry of a neural network is to find the distribution of the eigenvalues of its Hessian matrix. Indeed, depending on the sign of the eigenvalues of the Hessian, one can for instance distinguish local minima, local maxima and saddle points. As an illustration, the following figure shows how the sign of the eigenvalues of the Hessian matrix of a function affects the shape of the function's landscape around a stationary point.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/hess_eig.png" class="img-fluid" %}
  
@@ -166,21 +161,15 @@ We observe once again that the Hessian information is accessed through HVPs rath
 We now turn to the practical computation of HVPs.
 
 
-## A quick detour by automatic differentiation
+## A quick detour of automatic differentiation
 
-Automatic differentiation is an important tool to compute automatically the derivatives of differentiable functions. In machine learning, it is used everywhere to compute gradients of deep learning cost functions<d-cite key="Rumelhart1986"></d-cite>. There are two modes in automatic differentiation; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs). Since the gradient of a scalar function is a special case of the VJP, the reverse mode is the most frequently used in machine learning.
+Automatic differentiation is an important tool to compute automatically the derivatives of differentiable functions. In machine learning, AD is used everywhere to compute gradients of deep learning cost functions<d-cite key="Rumelhart1986"></d-cite>. There are two modes in AD; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs). Since the gradient of a scalar function is a special case of the VJP, the reverse mode is the most frequently used in machine learning.
 
-In what follows, we present briefly the notion of computational graph and the two automatic differentiation modes. For a more detailed explanation, we refer the reader to the survey by Baydin et al.<d-cite key="Baydin2018"></d-cite>. 
-
-We consider a differentiable function $$f:\mathbb{R}^d\to\mathbb{R}^p$$. For any $$x\in\mathbb{R}^d$$, we also consider $$f(x) = (f_1(x),\dots,f_p(x))^\top\in\mathbb{R}^p$$. The Jacobian matrix of $$f$$ at $$x$$ is the matrix of its partial derivatives
-
-$$
-  Df(x) = \left[\frac{\partial f_i}{\partial x_j}(x)\right]_{\substack{1\leq i\leq p\\ 1 \leq j\leq d}} = \begin{bmatrix} \nabla f_1(x)^\top \\ \vdots \\ \nabla f_p(x)^\top\end{bmatrix}\in\mathbb{R}^{p\times d}\enspace.
-$$
+In what follows, we present briefly the notion of computational graph and the two AD modes. For a more detailed explanation, we refer the reader to the survey by Baydin et al.<d-cite key="Baydin2018"></d-cite>. 
 
 ### Computational graph
 
-A key ingredient of automatic differentiation is a computational graph associated with the code that evaluates a function. It is a directed acyclic graph that represents the succession of elementary operations required the evaluate a function. Let us consider for instance a two-layer linear perceptron $$f_x:\mathbb{R}^2\times \mathbb{R}^{2\times 2}\to \mathbb{R}$$ defined for a provided $$x\in\mathbb{R}^2$$ by
+A key ingredient of AD is a computational graph associated with the code that evaluates a function. It is a directed acyclic graph that represents the succession of elementary operations required the evaluate a function.  Let us consider a multilayer linear perceptron (MLP) with 2 layers $$f_x:\mathbb{R}^2\times \mathbb{R}^{2\times 2}\to \mathbb{R}$$ defined for a provided $$x\in\mathbb{R}^2$$ by
 
 \begin{equation}\label{eq:mlp}
   f_x(U, W) = \frac12(UWx)^2\enspace.
@@ -190,13 +179,13 @@ A possible computational graph to get $$f_x(U, W)$$ is the following
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/computational_graph.png" class="img-fluid"%}
 
-In this graph, the vertices $$z_i$$ represent the intermediate states of the evaluation of $$f$$. Hence, the complexity of a function evaluation depends on the complexity of the considered computational graph. In terms of memory, to get the vertex $$z_i$$, we use the values stored by its parents in the graph. Thus, the memory footprint of the evaluation of the function is linked to the maximum number of parents that can have a vertex in the computational graph. Particularly, in our case, each node has at most two parents. The Python code to compute $$f$$ by following the previous computational graph is the following
+In this graph, the vertices $$z_i$$ represent the intermediate states of the evaluation of $$f_x$$. Hence, the complexity of a function evaluation depends on the complexity of the considered computational graph. In terms of memory, to get the vertex $$z_i$$, we use the values stored by its parents in the graph. Thus, the memory footprint of the evaluation of the function is linked to the maximum number of parents that can have a vertex in the computational graph. Particularly in our case, each node has at most two parents. The Python code to compute $$f_x$$ by following the previous computational graph is the following
 
 ```python
 def f(U, W):
     z1 = W @ x
     z2 = U @ z1
-    output = .5 * z2**2
+    output = 0.5 * z2**2
     return output
 ```
 
@@ -215,7 +204,7 @@ To compute the derivative of the node $$z_i$$ with respect its ancestor $$z_j$$,
 
 If $$z_k$$ is a parent of $$z_i$$, the quantity $$\textcolor{red}{\frac{\partial z_i}{\partial z_k}}$$ is easy to compute since $$z_i$$ and $$z_k$$ are connected by an elementary operation we know how to differentiate. For the quantity $$\textcolor{blue}{\frac{\partial z_k}{\partial z_j}}$$, we can compute it recursively thanks to \eqref{eq:chain_rule_forward} during a forward pass in the computational graph and using the fact that $$\frac{\partial z_j}{\partial z_j} = 1$$. Note that by initializing by $$\frac{\partial z_j}{\partial z_j} = v$$ for some vector $$v$$, the forward differentiation in \eqref{eq:chain_rule_forward}  returns the Jacobian-vector product (JVP) $$\frac{\partial z_i}{\partial z_j} v$$.
 
-Thus, computing a JVP can be achieved by a forward pass in a computational graph with the supplementary overhead of the computation of the successive JVPs. Therefore, the time complexity of forward differentiation is roughly twice the time complexity of the evaluation of $$f$$.
+Thus, computing a JVP can be achieved by a forward pass in a computational graph with the supplementary overhead of the computation of the successive JVPs. Therefore, the time complexity of forward differentiation is roughly twice the time complexity of the evaluation of $$f_x$$.
 
 To understand properly what is happening when using forward differentiation, let us go back to the linear MLP defined in \eqref{eq:mlp}.
 If we code ourselves the forward differentiation to get the JVP, we obtain the following code
@@ -236,10 +225,10 @@ def jvp(U, W, vu, vw):
 
 In comparison with the code of the evaluation of $$f$$, there are two more operations corresponding to the computation of the dual variable `vz1` and `vz2`. In terms of memory, if we consider the computational of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `vz2` which has the vertices `U`, `vz1`, `vu` and `z1` as parents.
 
-In JAX, we can get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(f, (x, ), (v, ))[1]`.
+In `JAX`, we can get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(f, (x, ), (v, ))[1]`.
 
 ### Reverse mode
-Now, let us present the reverse mode automatic differentiation. We consider the following computational graph snippet
+Now, let us present the reverse mode AD. We consider the following computational graph snippet
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/reverse_diff.png" class="img-fluid" %}
 
@@ -250,9 +239,9 @@ Instead of expressing $$\frac{\partial z_i}{\partial z_j}$$ according to the par
   \sum_{k\in\text{children}(j)}\textcolor{blue}{\frac{\partial z_i}{\partial z_k}}\textcolor{red}{\frac{\partial z_k}{\partial z_j}}\enspace.
 \end{equation}
 
-If $$z_k$$ is a child of $$z_j$$, then the quantity $$\textcolor{red}{\frac{\partial z_k}{\partial z_j}}$$ is easy to compute since the vertices $$z_k$$ and $$z_j$$ are linked by an elementary operation we know how to differentiate. To get $$\textcolor{blue}{\frac{\partial z_i}{\partial z_k}}$$, one can apply the formula \eqref{eq:chain_rule_backward} recursively during a backward pass in the computational graph with the initialization $$\frac{\partial z_i}{\partial z_i} = 1$$. If we initialize the backward pass with $$\frac{\partial z_i}{\partial z_i} = v$$, then the reverse automatic differentiation returns the vector-Jacobian product (VJP) $$v \frac{\partial z_i}{\partial z_j}$$.
+If $$z_k$$ is a child of $$z_j$$, then the quantity $$\textcolor{red}{\frac{\partial z_k}{\partial z_j}}$$ is easy to compute since the vertices $$z_k$$ and $$z_j$$ are linked by an elementary operation we know how to differentiate. To get $$\textcolor{blue}{\frac{\partial z_i}{\partial z_k}}$$, one can apply the formula \eqref{eq:chain_rule_backward} recursively during a backward pass in the computational graph with the initialization $$\frac{\partial z_i}{\partial z_i} = 1$$. If we initialize the backward pass with $$\frac{\partial z_i}{\partial z_i} = v$$, then the reverse AD returns the vector-Jacobian product (VJP) $$v \frac{\partial z_i}{\partial z_j}$$.
 
-At the end of the day, the reverse automatic differentiation requires a forward pass in the computational graph to get the intermediate states $$z_i$$ and a backward pass to propagate the intermediate partial derivatives. Hence, the complexity of the reverse automatic differentiation is twice the complexity of the evaluation of $$f$$. Moreover, it suffers from a memory burden because of the storing of all the intermediate states $$z_i$$ computed during the forward pass. 
+At the end of the day, the reverse AD requires a forward pass in the computational graph to get the intermediate states $$z_i$$ and a backward pass to propagate the intermediate partial derivatives. Hence, the complexity of the reverse AD is twice the complexity of the evaluation of $$f_x$$. Moreover, it suffers from a memory burden because of the storing of all the intermediate states $$z_i$$ computed during the forward pass. 
 
 Let us observe what happens if we code manually the backpropagation to get the gradient of the previous function $$f_x$$ defined by $$f_x(U, W) = \frac12(UW^\top x)^2$$.
 
@@ -277,20 +266,20 @@ def gradient(U, W):
     return dU, dW
 ```
 
-This function returns the gradient of $$f$$. At reading this code, we understand one needs to store all the intermediate values of the forward pass in the graph. Indeed, if we look at the case of `z1` which is the first node computed, it is used four steps later for the computation of `dU`.
+This function returns the gradient of $$f_x$$. At reading this code, we understand one needs to store all the intermediate values of the forward pass in the graph. Indeed, if we look at the case of `z1` which is the first node computed, it is used four steps later for the computation of `dU`.
 
 To get the VJP in JAX, one can use `jax.vjp(f, x)[1](v)`.
 
 
 ## Naive computation of HVPs
-Since we are interested in computing $$\nabla^2 f(x)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX`` by calling `jax.hessian(f) @ v`.
+Since we are interested in computing $$\nabla^2 f(x)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f) @ v`.
 
 However, this method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the input dimension.
 
 Nevertheless, we will see in what follows that computing and storing the full Hessian matrix is not mandatory to compute HVPs.
 
 ## HVPs without explicit Hessian computation
-A clever use of automatic differentiation enables computing HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
+A clever use of AD enables computing HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
 
 ### Forward-over-reverse
 The HVPs have another interpretation coming from differential calculus. They are the directional derivatives of the gradient of $$f$$ in the direction $v$<d-cite key="Pearlmutter1994"></d-cite>:
@@ -307,7 +296,7 @@ Hence, to get the HVP, one can apply the previous principle by tacking $$\phi = 
 def hvp_forward_over_reverse(f, x, v):
   return jax.jvp(jax.grad(f), (x, ), (v, ))[1]
 ```
-In this case, `jax.grad(f)(x)` is computed by backward automatic differentiation, whose complexity is two times the complexity of evaluating $$f$$. Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
+In this case, `jax.grad(f)(x)` is computed by backward AD, whose complexity is two times the complexity of evaluating $$f$$. Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
 
 To better see what happens, let us consider again our function $$f$$ defined by \eqref{eq:mlp}. The Python code of the `forward-over-reverse` HVP is the following.
 
@@ -404,7 +393,7 @@ def reverse_over_reverse(U, W, vu, vw):
   ```
 
 ### Reverse-over-forward
-The quantity $$\langle \nabla f(x),v\rangle$$ is also the product between the Jacobian matrix of $$f$$ and the vector $$v$$. Therefore, it can be computed using forward automatic differentiation.
+The quantity $$\langle \nabla f(x),v\rangle$$ is also the product between the Jacobian matrix of $$f$$ and the vector $$v$$. Therefore, it can be computed using forward AD.
 
 ```python
 def hvp_reverse_over_forward(f, x, v):
@@ -471,7 +460,7 @@ We also report on the right figure the computational time of each method with re
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_jax.png" class="img-fluid" %}
 
-We run a similar experiment with the JAX-like API available in `PyTorch` [`torch.func`](https://pytorch.org/docs/stable/func.html). The results we get are more contrasted. If for the case of ResNet34, the scaling between the different methods is similar to the one we get with JAX. For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for the ViT and BERT architecture, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory.
+We run a similar experiment with the functional API available in `PyTorch` [`torch.func`](https://pytorch.org/docs/stable/func.html) similar to the one `JAX` has. The results we get are more contrasted. In the case of ResNet34, the scaling between the different methods is similar to the one we get with JAX. For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for the ViT and BERT architecture, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_torch.png" class="img-fluid" %}
 
@@ -481,13 +470,19 @@ We also compare the memory footprint of each approach. The following figure prov
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax.png" class="img-fluid" %}
 
-However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime. In light of these two results, we can conjecture that the computational graph of the different HVP methods contains some redundancy that is optimized by the JIT compilation.
+However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates more the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. This is because the `reverse-over-reverse` involves two successives backward differentiations while the two others involve only one reverse differentiation. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime. In light of these two results, the clever memory allocation performed during just-in-time compilation reduces the memory footprint of the computations.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax_without_jit.png" class="img-fluid" %}
 
-In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes much memory in comparison with the `reverse-over-forward` mode. The right plot of the evolution of the memory footprint with the batch size for the ResNet34 architecture evolves linearly as expected.
+In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes much memory in comparison with the `reverse-over-forward` mode. Actually, it is almost at the same level as `reverse-over-reverse` mode. The right plot of the evolution of the memory footprint with the batch size for the ResNet34 architecture evolves linearly as expected.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_torch.png" class="img-fluid" %}
 
+## Conclusion
 
+In this blogpost, we have explored the different ways to compute HVP from theoretical and practical perspectives. We end up with the following take-home messages:
+
+* In practice, computing an HVP takes between twice and four times the time taken by a gradient computation and requires two to three times more memory than computing a gradient.
+
+* The AD framework and the use or not of the just-in-time compilation affects the practical performances of HVPs computations in time and memory.
 
