not the worse commit

--- a/assets/bibliography/2024-05-07-hidden-convex-relu.bib
+++ b/assets/bibliography/2024-05-07-hidden-convex-relu.bib
@@ -64,6 +64,17 @@
   file = {/home/savar/Zotero/storage/GFUYDNQG/Boursier et al. - 2022 - Gradient flow dynamics of shallow ReLU networks fo.pdf;/home/savar/Zotero/storage/BEF9KKY7/2206.html}
 }
 
+@article{boursierGradientFlowDynamics2022c,
+  title = {Gradient Flow Dynamics of Shallow Relu Networks for Square Loss and Orthogonal Inputs},
+  author = {Boursier, Etienne and {Pillaud-Vivien}, Loucas and Flammarion, Nicolas},
+  year = {2022},
+  journal = {Advances in Neural Information Processing Systems},
+  volume = {35},
+  pages = {20105--20118},
+  urldate = {2023-12-15},
+  file = {/home/savar/Zotero/storage/B2M446XU/Boursier et al. - 2022 - Gradient flow dynamics of shallow relu networks fo.pdf}
+}
+
 @inproceedings{chizatGlobalConvergenceGradient2018,
   title = {On the Global Convergence of Gradient Descent for Over-Parameterized Models Using Optimal Transport},
   booktitle = {Advances in Neural Information Processing Systems 31: Annual Conference on Neural Information Processing Systems 2018, NeurIPS 2018, December 3-8, 2018, Montr{\'e}al, Canada},
@@ -138,6 +149,22 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Mathematics - Probability,Statistics - Machine Learning},
   file = {/home/savar/Zotero/storage/ZCALKGZJ/Jacot et al. - 2020 - Neural Tangent Kernel Convergence and Generalizat.pdf;/home/savar/Zotero/storage/R2WWHMT5/1806.html}
+}
+
+@misc{marionLeveragingTwoTimescale2023,
+  title = {Leveraging the Two Timescale Regime to Demonstrate Convergence of Neural Networks},
+  author = {Marion, Pierre and Berthier, Rapha{\"e}l},
+  year = {2023},
+  month = oct,
+  number = {arXiv:2304.09576},
+  eprint = {2304.09576},
+  primaryclass = {cs, math, stat},
+  publisher = {arXiv},
+  urldate = {2023-12-15},
+  abstract = {We study the training dynamics of shallow neural networks, in a two-timescale regime in which the stepsizes for the inner layer are much smaller than those for the outer layer. In this regime, we prove convergence of the gradient flow to a global optimum of the non-convex optimization problem in a simple univariate setting. The number of neurons need not be asymptotically large for our result to hold, distinguishing our result from popular recent approaches such as the neural tangent kernel or mean-field regimes. Experimental illustration is provided, showing that the stochastic gradient descent behaves according to our description of the gradient flow and thus converges to a global optimum in the two-timescale regime, but can fail outside of this regime.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning,Mathematics - Optimization and Control,Statistics - Machine Learning},
+  file = {/home/savar/Zotero/storage/YCJHIA35/Marion and Berthier - 2023 - Leveraging the two timescale regime to demonstrate.pdf;/home/savar/Zotero/storage/6AEBYHBX/2304.html}
 }
 
 @misc{mishkinFastConvexOptimization2022a,
