feat: byol added

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -106,3 +106,12 @@ url = {https://www.sciencedirect.com/science/article/pii/S1364661319300610},
   year      = {2018},
   url       = {https://openai.com/research/reinforcement-learning-with-prediction-based-rewards}
 }
+
+@misc{grill2020bootstrap,
+      title={Bootstrap your own latent: A new approach to self-supervised Learning}, 
+      author={Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and Bernardo Avila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
+      year={2020},
+      eprint={2006.07733},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
