--- a/assets/bibliography/2024-05-07-practitioners-guide-explaining-gnns-graphmask.bib
+++ b/assets/bibliography/2024-05-07-practitioners-guide-explaining-gnns-graphmask.bib
@@ -54,3 +54,40 @@
     booktitle = {Sixth International Conference on Learning Representations},
 }
 
+@InProceedings{pmlr-v80-nie18a,
+  title = 	 {A Theoretical Explanation for Perplexing Behaviors of Backpropagation-based Visualizations},
+  author =       {Nie, Weili and Zhang, Yang and Patel, Ankit},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {3809--3818},
+  year = 	 {2018},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+  url = 	 {https://proceedings.mlr.press/v80/nie18a.html},
+}
+
+
+@InProceedings{pmlr-v151-agarwal22b,
+  title = 	 {Probing GNN Explainers: A Rigorous Theoretical and Empirical Analysis of GNN Explanation Methods},
+  author =       {Agarwal, Chirag and Zitnik, Marinka and Lakkaraju, Himabindu},
+  booktitle = 	 {Proceedings of The 25th International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {8969--8996},
+  year = 	 {2022},
+  volume = 	 {151},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {28--30 Mar},
+  publisher =    {PMLR},
+  url = 	 {https://proceedings.mlr.press/v151/agarwal22b.html},
+}
+@article{abs-2203-09258,
+  author       = {Peibo Li and
+                  Yixing Yang and
+                  Maurice Pagnucco and
+                  Yang Song},
+  title        = {Explainability in Graph Neural Networks: An Experimental Survey},
+  journal      = {CoRR},
+  volume       = {abs/2203.09258},
+  year         = {2022},
+  url          = {https://arxiv.org/abs/2203.09258},
+}
